@@ -1,3 +1,11 @@
+2006-01-06  Fred Fish  <fnf@specifix.com>
+
+	* objfiles.c (source.h): Include.
+	(free_objfile): Update comment about clear_symtab_users().
+	(free_objfile): Check all symtabs of objfile being freed and if
+	one of them is the current source symtab, call
+ 	clear_current_source_symtab_and_line().
+
 2006-01-04  Michael Snyder  <msnyder@redhat.com>
 
 	Checkpoint/Restart for Linux.
